data/derived/comb/progs/unify/prog4633.ml.out
Characters 120-122:
  | Average (e1,e2) -> ((e1*1.00)+.(e2*1.00))/.2.0;;
                         ^^
Error: This expression has type expr but an expression was expected of type
         int
